--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class='container'>
-      <p align="center"><%= image_tag "prisoners_pizza.png", class: "pizza_logo"%></p>
-      <h1 align='center' style='font-size:3rem;color:#d12b15'>The NYC Pizza Society</h1>
+      <p align="center"><%= image_tag "prisoners_photo.png", class: "photo_logo"%></p>
+      <h1 align='center' style='font-size:3rem;color:#d12b15'>The NYC Photo Society</h1>
       <%= yield %>
     </div>
   </body>
